Cleaned up some layout issues on Recordings

--- a/_themes/tm3/css/buttons.css
+++ b/_themes/tm3/css/buttons.css
@@ -79,6 +79,3 @@
 .button.sample.small.positioned { margin-top: -22px; }
 
 .button.border:hover { background-color: #202020; color: #FFF; }
-
-.dark .button.border { border-color: rgba(255, 255, 255, 0.1); }
-.dark .button.border:hover { background-color: rgba(255, 255, 255, 0.1); }
