--- a/_themes/tm3/css/recordings.css
+++ b/_themes/tm3/css/recordings.css
@@ -42,7 +42,7 @@
     top: 0;
 }
 
-#site-wrapper { padding: 40px 0; }
+#site-wrapper { padding-top: 40px; }
 #next-recording-overlay { opacity: 0; }
 #recordings-list { padding: 0; }
 #recordings-list .recording { margin-bottom: 90px; }
@@ -51,5 +51,5 @@
 
 @media (min-width: 768px)
 {
-    #site-wrapper { padding: 120px 0 60px 0; }
+    #site-wrapper { padding-top: 120px; }
 }
